# hypermodern-python-example

./: .flake8  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/hypermodern_python_example/: console.py
tests/: conftest.py  test_console.py  test_wikipedia.py
