[tool.poetry]
name = "hypermodern-python-example"
version = "0.1.0"
description = "A simple example of python tooling"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/FelipeCabelloE/hypermodern-python-example"
repository = "https://github.com/FelipeCabelloE/hypermodern-python-example"
keywords = ["hypermodern"]


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.scripts]
hypermodern-python-example = "hypermodern_python_example.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
