[tool.poetry]
name = "hypermodern-python-example"
version = "0.1.0"
description = "A simple example of python tooling"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/FelipeCabelloE/hypermodern-python-example"
repository = "https://github.com/FelipeCabelloE/hypermodern-python-example"
keywords = ["hypermodern"]


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.scripts]
hypermodern-python-example = "hypermodern_python_example.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = { extras = ["toml"], version = "^7.6.0" }
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_example"]

[tool.coverage.report]
show_missing = true
